---------------------------------------------------------------------------
Version 5.9.4  [V5-DEVEL], 2011-0?-??
- bugfix: imuxsock did no longer ignore message-provided timestamp, if
  so configured (the *default*). Lead to no longer sub-second timestamps.
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=281
- bugfix: omfile returns fatal error code for things that go really wrong
  previously, RS_RET_RESUME was returned, which lead to a loop inside the
  rule engine as omfile could not really recover.
- bugfix: rsyslogd -v always said 64 atomics were not present
  thanks to mono_matsuko for the patch
---------------------------------------------------------------------------
Version 5.9.3  [V5-DEVEL], 2011-09-01
- bugfix/security: off-by-two bug in legacy syslog parser, CVE-2011-3200
- bugfix: mark message processing did not work correctly
- added capability to emit config error location info for warnings 
  otherwise, omusrmsg's warning about new config format was not
  accompanied by problem location.
- bugfix: potential misadressing in property replacer
- bugfix: MSGID corruption in RFC5424 parser under some circumstances
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=275
- bugfix: The NUL-Byte for the syslogtag was not copied in MsgDup (msg.c)
---------------------------------------------------------------------------
Version 5.9.2  [V5-DEVEL] (rgerhards), 2011-07-11
- systemd support: set stdout/stderr to null - thx to Lennart for the patch
- added support for the ":omusrmsg:" syntax in configuring user messages
- added support for the ":omfile:" syntax in configuring user messages
---------------------------------------------------------------------------
Version 5.9.1  [V5-DEVEL] (rgerhards), 2011-06-30
- added support for obtaining timestamp for kernel message from message
  If the kernel time-stamps messages, time is now take from that
  timestamp instead of the system time when the message was read. This